syntax = "proto3";

package manager;

import "errors/errors.proto";
option go_package = "./v1;v1";

enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 200;

  NotFoundError = 0[(errors.message)="数据不存在"];
  DatabaseError = 1[(errors.message)="数据库错误"];
  MetadataError = 2[(errors.message)="元数据异常"];
  TransformError = 3[(errors.message)="数据转换失败"];
  DepartmentPermissionsError = 4[(errors.message)="无此部门权限"];
  RolePermissionsError= 5[(errors.message)="无此角色权限"];
  UserPermissionsError= 6[(errors.message)="无此用户权限"];
  MenuPermissionsError= 7[(errors.message)="无此菜单权限"];
  EditSystemDataError = 8[(errors.message)="系统数据，不允许修改"];
  DeleteSystemDataError = 9[(errors.message)="系统数据，不允许删除"];
  NewCaptchaError = 10[(errors.message)="二维码生成失败"];
  VerifyCaptchaError = 11[(errors.message)="验证码验证失败"];
  RsaDecodeError = 12[(errors.message)="rsa解密失败"];
  PasswordFormatError = 13[(errors.message)="密码格式错误"];
  PasswordExpireError = 14[(errors.message)="密码已过期"];
  UserDisableError = 15[(errors.message)="用户已被禁用"];
  RoleDisableError = 16[(errors.message)="角色已被禁用"];
  UserPasswordError = 17[(errors.message)="用户密码错误"];
  NewTokenError = 18[(errors.message)="token生成失败"];
  ParseTokenError = 19[(errors.message)="token解析失败"];
  RefreshTokenError = 20 [(errors.code)=401,(errors.message)="刷新token失败"];
  EmptyTokenError = 21[(errors.message)="token不能为空"];
  DeleteSelfRoleError = 22[(errors.message)="不能删除自己的当前所属角色"];
  DeleteSelfDepartmentError = 23[(errors.message)="不能删除自己的当前所属部门"];
  ParentMenuError = 24[(errors.message)="当前菜单的父菜单不能为自己"];
  SendEmailCaptchaError = 25[(errors.message)="发送邮箱验证码失败"];
  UsernameFormatError = 26[(errors.message)="用户名格式错误"];
  UsernameNotExistError = 27[(errors.message)="用户不存在"];
  DisableSelfUserError = 28[(errors.message)="不能禁用当前用户"];
  ForbiddenError = 29[(errors.message)="无接口权限"];
}


