syntax = "proto3";

package manager.api.tenant;

option go_package = "manager/api/tenant;tenant";
option java_multiple_files = true;
option java_package = "manager.api.tenant.proto";

import "validate/validate.proto";

message CreateTenantRequest {
  string logo = 1[(validate.rules).string = {min_len: 1,max_len:128}];
  string keyword = 2[(validate.rules).string = {min_len: 1,max_len:32}];
  string name = 3[(validate.rules).string = {min_len: 1,max_len:64}];
  optional bool status = 4;
  string description = 5[(validate.rules).string = {max_len:256}];
  uint32 weight = 6;
}

message CreateTenantReply {
  uint32 id = 1;
}

message UpdateTenantRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional string logo = 2[(validate.rules).string = {min_len: 1,max_len:128}];
  optional string name = 3[(validate.rules).string = {max_len:64}];
  optional bool status = 4;
  optional string description = 5[(validate.rules).string = {max_len:256}];
  optional uint32 weight = 6;
}
message UpdateTenantReply {
}

message DeleteTenantRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}
message DeleteTenantReply {}

message GetTenantRequest {
  optional uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional string keyword = 2[(validate.rules).string = {min_len: 1}];
}

message GetTenantReply {
  uint32 id = 1;
  string keyword = 2;
  string name = 3;
  optional bool status = 4;
  string description = 5;
  uint32 weight = 6;
  uint32 createdAt = 7;
  uint32 updatedAt = 8;
}

message ListTenantRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3;
  optional string orderBy = 4;
  optional string name = 5;
  optional string keyword = 6;
  optional bool status = 7;
}

message ListTenantReply {
  message Data{
    uint32 id = 1;
    string keyword = 2;
    string logo = 3;
    string name = 4;
    optional bool status = 5;
    string description = 6;
    uint32 weight = 7;
    uint32 createdAt = 8;
    uint32 updatedAt = 9;
  }
  repeated Data list = 1;
  uint32 total = 2;
}

